# zstd

./: .buckconfig  .cirrus.yml  .coverity.yml  .gitattributes  .gitignore  .travis.yml  Apple Watch Sport  CHANGELOG  CMakeLists.txt  CNAME  CONTRIBUTING.md  COPYING  Contribuir  LICENSE  LICENSE-examples  Makefile  NEWS  Package.swift  Prada Luna  README.md  Readme.md  SECURITY.md  TESTING.md  appveyor.yml  appveyor_old.yml  circle.yml  frame.txt  index.html  meson.build  name.c  perf.data  signing-key.asc  zstd.rb  zstd_compression_format.md  zstd_frame_format.md  zstd_manual.html
.circleci/: config.yml
CMakeModules/: AddExtraCompilationFlags.cmake
_zstdbench/: 0.3.3.txt  Makefile  compressors.cpp  compressors.h  zstdbench.cpp
circleci/: .config.yml.swo  config.yml
contib/cmake/: CMakeLists.txt
contrib/: CMakeLists.txt
contrib/cmake/emscripten/: CMakeLists.txt
contrib/cmake/lib/: CMakeLists.txt
contrib/cmake/programs/: CMakeLists.txt
contrib/meson/: CopyFile.py  CreateSymlink.py  GetZstdLibraryVersion.py  README  README.md  meson.build  meson_options.txt
contrib/meson/contrib/gen_html/: meson.build
contrib/meson/contrib/pzstd/: meson.build
contrib/meson/lib/: meson.build
contrib/meson/programs/: meson.build
contrib/meson/tests/: meson.build
dictBuilder/: Makefile  config.h  dibcli.c  dibio.c  dibio.h  dictBuilder.c  dictBuilder.h  dictionary  divsufsort.c  divsufsort_private.h  lfs.h  sssort.c  trsort.c
doc/: README.md  decompressor_accepted_invalid_data.md  decompressor_errata.md  decompressor_permissive.md  zstd_compression_format.md  zstd_manual.html
emscripten/: zstd.js.c
examples/: .gitignore  Makefile  README.md  common.h  dictionary_compression.c  dictionary_decompression.c  multiple_simple_compression.c  multiple_streaming_compression.c  seekable_compression.c  seekable_decompression.c  simple_compression.c  simple_compressionCCtx.c  simple_decompression.c  streaming_compression.c  streaming_compression_thread_pool.c  streaming_decompression.c  streaming_memory_usage.c  utils.h
fuzz/: Makefile  README.md  simple_round_trip.c
js/: bootstrap-patch.css  rendercharts.js  strapdown-hook.js
lib/: .gitignore  BUCK  CMakeLists.txt  Makefile  README.md  bitstream.h  dictBuilder.c  dictBuilder.h  dictBuilder_static.h  divsufsort.c  error.h  error_private.h  error_public.h  fse.c  fse.h  fse_static.h  huff0.c  huff0.h  huff0_static.h  libzstd.mk  libzstd.pc.in  log  mem.h  module.modulemap  zbuff.c  zbuff.h  zbuff_static.h  zdict.c  zdict.h  zdict_static.h  zstd.c  zstd.h  zstd_Ccommon.h  zstd_buffered.c  zstd_buffered.h  zstd_buffered_static.h  zstd_compress.c  zstd_decompress.c  zstd_errors.h  zstd_internal.h  (+9 more)
lib/common/: bits.h  bitstream.h  compiler.h  cpu.h  debug.c  debug.h  entropy_common.c  error_private.c  error_private.h  error_public.h  fse.h  fse_decompress.c  fse_static.h  huf.h  huf_static.h  mem.h  pool.c  pool.h  portability_macros.h  random.h  seekable.h  threading.c  threading.h  util.h  xxhash.c  xxhash.h  zbuff.h  zbuff_static.h  zstd.h  zstd_common.c  zstd_deps.h  zstd_errors.h  zstd_internal.h  zstd_seccomp.c  zstd_seccomp.h  zstd_static.h  zstd_trace.c  zstd_trace.h  zstdmt_depthreadpool.c  zstdmt_depthreadpool.h  (+1 more)
lib/compress/: clevels.h  fse_compress.c  hist.c  hist.h  huf_compress.c  huf_compress_impl.h  zbuff_compress.c  zstd_compress.c  zstd_compress.h  zstd_compress_impl.h  zstd_compress_internal.h  zstd_compress_literals.c  zstd_compress_literals.h  zstd_compress_sequences.c  zstd_compress_sequences.h  zstd_compress_superblock.c  zstd_compress_superblock.h  zstd_cwksp.c  zstd_cwksp.h  zstd_double_fast.c  zstd_double_fast.h  zstd_fast.c  zstd_fast.h  zstd_lazy.c  zstd_lazy.h  zstd_ldm.c  zstd_ldm.h  zstd_ldm_geartab.h  zstd_opt.c  zstd_opt.h  zstd_preSplit.c  zstd_preSplit.h  zstdmt_compress.c  zstdmt_compress.h  zstdseek_compress.c
lib/compress/.debug/: zstd_stats.h
lib/decompress/: fse_decompress.c  huf_decompress.c  huf_decompress_aarch64.S  huf_decompress_amd64.S  huf_decompress_impl.h  huf_decompress_x86_bmi2.S  zbuff_decompress.c  zstd_ddict.c  zstd_ddict.h  zstd_decompress.c  zstd_decompress_block.c  zstd_decompress_block.h  zstd_decompress_impl.h  zstd_decompress_internal.h  zstdmt_decompress.c  zstdmt_decompress.h  zstdseek_decompress.c
lib/deprecated/: zbuff.h  zbuff_common.c  zbuff_compress.c  zbuff_decompress.c
lib/dictBuilder/: cover.c  cover.h  divsufsort.c  divsufsort.h  fastcover.c  libsais.c  libsais.h  libsais_internal.h  zdict.c  zdict.h  zdict_static.h
lib/dll/: libzstd.def
lib/dll/example/: Makefile  README.md  build_package.bat  fullbench-dll.vcxproj
lib/include/: zstd.h
lib/legacy/: zstd_legacy.h  zstd_v01.c  zstd_v01.h  zstd_v02.c  zstd_v02.h  zstd_v03.c  zstd_v03.h  zstd_v04.c  zstd_v04.h  zstd_v05.c  zstd_v05.h  zstd_v06.c  zstd_v06.h  zstd_v07.c  zstd_v07.h  zstd_v08.c  zstd_v08.h
lib/modulemap/: module.modulemap  zstd-umbrella.h
programs/: .clang_complete  .gitignore  BUCK  CMakeLists.txt  Makefile  README.md  bench.c  bench.h  benchfn.c  benchfn.h  benchzstd.c  benchzstd.h  datagen.c  datagen.h  datagencli.c  dibio.c  dibio.h  fileio.c  fileio.h  fileio_asycio.c  fileio_asycio.h  fileio_asyncio.c  fileio_asyncio.h  fileio_common.h  fileio_types.h  fullbench.c  fuzzer.c  have_lzma.c  lorem.c  lorem.h  paramgrill.c  platform.h  playTests.sh  result  roundTripCrash.c  timefn.c  timefn.h  tmp.mgz  tmp.zstd  unzstd.1  (+18 more)
programs/legacy/: fileio_legacy.c  fileio_legacy.h
programs/tests/: playTests.bat  playTests.sh  playTestsMSYS.sh  roundTripTest.bat
programs/windres/: generate_res.bat  verrsrc.h  zstd.rc  zstd32.res  zstd64.res
projects/: .gitignore  README.md
projects/cmake/: CMakeLists.txt
projects/cmake/lib/: CMakeLists.txt
projects/cmake/programs/: .gitignore  CMakeLists.txt
projects/cmake/tests/: CMakeLists.txt
python/: pyzstd.c  setup.py
tests/: .gitignore  DEPRECATED-test-zstd-speed.py  Makefile  README.md  automated-benchmarking.py  automated_benchmarking.py  bigdict.c  cctxParamRoundTrip.c  checkTag.c  check_size.py  datagencli.c  fullbench.c  (+37 more)
(+546 files in other folders)
