# #############################################################################
# Copyright (c) 2018-present     Dima Krasner <dima@dimakrasner.com>
#                                lzutao <taolzu(at)gmail.com>
# All rights reserved.
#
# This source code is licensed under both the BSD-style license (found in the
# LICENSE file in the root directory of this source tree) and the GPLv2 (found
# in the COPYING file in the root directory of this source tree).
# #############################################################################

option('multithread_support', type: 'boolean', value: true,
    description: 'Enable multithreading when pthread is detected')
option('legacy_support', type: 'string', value: '4',
    description: 'Support any legacy format: true or false, or 7 to 1 for v0.7+ to v0.1+')
option('build_programs', type: 'boolean', value: true,
    description: 'Enable programs build')
option('build_contrib', type: 'boolean', value: false,
    description: 'Enable contrib build')
option('build_tests', type: 'boolean', value: false,
    description: 'Enable tests build')
option('use_static_runtime', type: 'boolean', value: false,
    description: 'Link to static run-time libraries on MSVC')
option('zlib_support', type: 'boolean', value: false,
    description: 'Enable zlib support')
option('lzma_support', type: 'boolean', value: false,
    description: 'Enable lzma support')
